welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: ';' expected but '=' found.
varx:Int=while(!estSurBiscuit){avance();}
        ^