welcome.lessons.welcome.variables.Variables.scala.code
varx:Int=while(!estSurBiscuit){avance();}
prendBiscuit()
recule();